--- a/index.html
+++ b/index.html
@@ -11,8 +11,41 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <header class="header"></header>
-    <main></main>
+    <header class="header">
+      <span class="">&lt;/HTML&gt;</span>
+      <h1 class="">закрывающий тег</h1>
+    </header>
+    <main>
+      <ul>
+        <li>
+          <article>
+            <h2>
+              Фритрек и нулевой спринт: Подготовка к работе
+            </h2>
+            <div>
+              <img src ="./images/image.png" alt = "">
+              <span></span>
+            </div>
+            <div>
+              <p>
+                Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
+              </p>
+              <p>
+                Место для ваших воспоминаний о начале обучения.
+              </p>
+            </div>
+            <div>
+              <button></button>
+              <button>Like</button>
+            </div>
+          </article>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <button>Сохранить на память</button>
+      <dialog></dialog>
+    </footer>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
