--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
               Фритрек и нулевой спринт: Подготовка к работе
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-many " src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark watermark-uppercase">&lt;/HTML&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
               </p>
               <p>
-                Место для ваших воспоминаний о начале обучения.
+                Стадия: Принятие и надежда.
               </p>
             </div>
             <div class = "card-buttons">
@@ -80,15 +80,15 @@
               1 спринт: Я — чистый лист
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-invert " src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark watermark-uppercase">&lt;/HTML&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
               </p>
               <p>
-                Место для ваших воспоминаний о начале первого спринта.
+                Стадия: Реконструкция и проработка.
               </p>
             </div>
             <div class = "card-buttons">
@@ -134,15 +134,15 @@
               1 спринт: А если не получится?
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-hue-rotate" src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark watermark-uppercase">&lt;CSS&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p>
-                Место для ваших воспоминаний об окончании первого спринта.
+                Стадия: Поворот вверх.
               </p>
             </div>
             <div class = "card-buttons">
@@ -188,15 +188,15 @@
               2 спринт: Погоня за идеалом
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-grayscale" src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark">&lt;desigions&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
               </p>
               <p>
-                Место для ваших воспоминаний о начале второго спринта.
+                Стадия: Депрессия.
               </p>
             </div>
             <div class = "card-buttons">
@@ -242,15 +242,15 @@
               2 спринт: О тех, кто рядом
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-drop-shadow" src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark">care</span>
             </div>
             <div class = "card-text">
               <p>
                 Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
               </p>
               <p>
-                Место для ваших воспоминаний об окончании второго спринта.
+                Стадия: Гнев и торг.
               </p>
             </div>
             <div class = "card-buttons">
@@ -296,15 +296,15 @@
               3 спринт: Обходные стратегии
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-contrast" src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark">&lt;support&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
               </p>
               <p>
-                Место для ваших воспоминаний о начале третьего спринта.
+                Стадия: Боль и чувство вины.
               </p>
             </div>
             <div class = "card-buttons">
@@ -350,15 +350,15 @@
               3 спринт: Когда опускаются руки
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-brightness" src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark">&lt;lifes-style: none;&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
               </p>
               <p>
-                Место для ваших воспоминаний об окончании третьего спринта.
+                Стадия: Шок и отрицание.
               </p>
             </div>
             <div class = "card-buttons">
@@ -404,15 +404,15 @@
               «Сейчас я здесь»
             </h2>
             <div class = "card-image-box">
-              <img class = "card-image" src ="./images/image.png" alt = "описание картинки">
-              <span class = "image-watermark">&lt;/HTML&gt;</span>
+              <img class = "card-image filter-blur " src ="./images/image.png" alt = "описание картинки">
+              <span class = "image-watermark">&lt;experience&gt;</span>
             </div>
             <div class = "card-text">
               <p>
                 Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p>
-                Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+                Стадия: Что же дальше?
               </p>
             </div>
             <div class = "card-buttons">
